--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ionic-native/android-permissions": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/location-accuracy": "^5.36.0",
+    "@ionic/lab": "^3.2.13",
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
